package com.liyi.design.pattern.behavior.command;

public interface Command {

    void execute();
    void undo();
}
